Archive2/3e/3a0d3169e113a4/output
main.cpp:7:27: error: declaration of 'operator*' as non-function
     friend Vector operator*<>(const Matrix<T>&, const Vector&); /* line 7 */
                           ^
main.cpp:7:27: error: expected ';' at end of member declaration
main.cpp:7:28: error: expected unqualified-id before '<' token
     friend Vector operator*<>(const Matrix<T>&, const Vector&); /* line 7 */
                            ^
main.cpp:15:30: error: declaration of 'operator*' as non-function
     friend Vector<T> operator*<>(const Matrix&, const Vector<T>&); /* line 14 */
                              ^
main.cpp:15:30: error: expected ';' at end of member declaration
main.cpp:15:31: error: expected unqualified-id before '<' token
     friend Vector<T> operator*<>(const Matrix&, const Vector<T>&); /* line 14 */
                               ^
main.cpp: In function 'int main()':
main.cpp:29:17: warning: unused variable 'v' [-Wunused-variable]
     Vector<int> v;
                 ^
